# adaptive-browser

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
blog/: 01-why-adaptive-browser.md  02-ui-manifest-spec.md  03-yaml-preferences.md  _meta.yaml
preferences/examples/: acme-corp.org.yaml  developer.user.yaml  manager.user.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/preferences/: defaults.user.yaml
src-tauri/src/: lib.rs
src-tauri/src/commands/: api_fetch.rs  auth.rs  cache.rs  llm.rs  manifest.rs  mod.rs  preferences.rs
src-tauri/src/models/: mod.rs  preferences.rs  ui_manifest.rs
src-tauri/src/services/: demo_data.rs  mod.rs  preference_merger.rs  spec_resolver.rs  ui_cache.rs
src/components/adaptive/: ActionBar.tsx  ActivityFeed.tsx  CardGrid.tsx  ColorBadge.tsx  DataTable.tsx  DetailView.tsx  Layout.tsx  MetricGrid.tsx  ProgressBar.tsx  StatCard.tsx  StatusList.tsx
src/components/shell/: AddressBar.tsx  AuthDialog.tsx  ContentArea.tsx  DebugPanel.tsx  NavigationSidebar.tsx  SettingsDialog.tsx  StatusBar.tsx
src/hooks/: useAdaptiveUI.ts
src/lib/: demo-responses.ts  openui-library.ts  prompt-context.ts  types.ts  ui-generator.ts
src/stores/: auth.ts  debug.ts  navigation.ts  preferences.ts  settings.ts
src/styles/: globals.css
